--- a/fplay.plugin.wirelessvisualizer/src/main/res/values-ru/strings.xml
+++ b/fplay.plugin.wirelessvisualizer/src/main/res/values-ru/strings.xml
@@ -13,16 +13,16 @@
     <string name="bt_stop">Stop transmission</string>
     <string name="bt_vumeter">VU meter + BPM detection</string>
     <string name="bt_pairing">Please, try to connect again after pairing the device.</string>
-    <string name="bt_connection_error">An error occurred while connecting to the Bluetooth device &#128546;</string>
-    <string name="bt_communication_error">An error occurred while communicating with the Bluetooth device &#128546;</string>
-    <string name="bt_needs_to_be_enabled">You need to enable Bluetooth to proceed &#128546;</string>
-    <string name="bt_not_supported">Bluetooth not supported &#128546;</string>
-    <string name="bt_discovery_error">An error occurred while searching for the Bluetooth devices &#128546;</string>
+    <string name="bt_connection_error">An error occurred while connecting to the Bluetooth device :(</string>
+    <string name="bt_communication_error">An error occurred while communicating with the Bluetooth device :(</string>
+    <string name="bt_needs_to_be_enabled">You need to enable Bluetooth to proceed :(</string>
+    <string name="bt_not_supported">Bluetooth not supported :(</string>
+    <string name="bt_discovery_error">An error occurred while searching for the Bluetooth devices :(</string>
     <string name="bt_devices">Bluetooth Devices</string>
     <string name="bt_connecting">Connecting to your Bluetooth device. Please wait&#8230;</string>
     <string name="bt_scanning">Searching for Bluetooth devices&#8230;</string>
-    <string name="bt_not_paired">No Bluetooth devices were paired &#128546;</string>
-    <string name="bt_not_found">No Bluetooth devices were found &#128546;</string>
+    <string name="bt_not_paired">No Bluetooth devices were paired :(</string>
+    <string name="bt_not_found">No Bluetooth devices were found :(</string>
     <string name="bt_null_device_name">(BT Device)</string>
 
 </resources>
